fix image width on mobile

--- a/porlosjovenes/static/css/main.css
+++ b/porlosjovenes/static/css/main.css
@@ -520,6 +520,15 @@ ul li a.menu-active {
     transition: 0.5s;
 }
 
+.menu-area.on-top {
+    position: fixed;
+    top: 28px;
+    width: 100%;
+    padding: 6px;
+}
+.menu-area.on-top .responsive-menu-wrap {
+    margin-top: -10px;
+}
 .responsive-menu-wrap {
     display: none;
 }
