--- a/porlosjovenes/static/css/responsive.css
+++ b/porlosjovenes/static/css/responsive.css
@@ -678,7 +678,11 @@
 /*		Wide Mobile Layout: 480px.
 ------------------------------------------------------------  */
 
-@media only screen and (min-width: 480px) and (max-width: 767px) {
+@media only screen and (max-width: 480px) {
+    body {
+    font-size: 8px;
+    }
+    
     .blog-slider .owl-nav div {
         left: 40%;
     }
@@ -721,10 +725,10 @@
         width: 143px;
     }
     .covid-banner{
-     height: 225px;
+     height: 196px;
     }
     .covid-banner2 {
-     height: 144px;
+     height: 120px;
     }
 
 }
